--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit bootstrap="./vendor/autoload.php" colors="true">
     <testsuites>
-        <testsuite name="ZFVersioning Module Tests">
+        <testsuite name="LaminasVersioning Module Tests">
             <directory>./test</directory>
         </testsuite>
     </testsuites>
