--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,45 @@
 {
-    "name": "zfcampus/zf-versioning",
-    "description": "ZF2 Module providing listeners and route prototypes for implementing API versioning",
-    "type": "library",
+    "name": "laminas-api-tools/api-tools-versioning",
+    "description": "Laminas Module providing listeners and route prototypes for implementing API versioning",
     "license": "BSD-3-Clause",
     "keywords": [
-        "zf2",
-        "zend",
+        "laminas",
+        "api-tools",
         "module",
         "rest"
     ],
-    "homepage": "http://apigility.org/",
+    "homepage": "https://api-tools.getlaminas.org",
     "support": {
-        "email": "apigility-users@zend.com",
-        "irc": "irc://irc.freenode.net/apigility",
-        "source": "https://github.com/zfcampus/zf-versioning",
-        "issues": "https://github.com/zfcampus/zf-versioning/issues"
+        "docs": "https://api-tools.getlaminas.org/documentation",
+        "issues": "https://github.com/laminas-api-tools/api-tools-versioning/issues",
+        "source": "https://github.com/laminas-api-tools/api-tools-versioning",
+        "rss": "https://github.com/laminas-api-tools/api-tools-versioning/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
     },
-    "repositories": [
-        { "type": "composer", "url": "https://packages.zendframework.com" }
-    ],
-    "minimum-stability": "dev",
+    "config": {
+        "sort-packages": true
+    },
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zend-eventmanager": "dev-develop",
-        "zendframework/zend-http": "dev-develop",
-        "zendframework/zend-modulemanager": "dev-develop",
-        "zendframework/zend-mvc": "dev-develop"
+        "laminas/laminas-eventmanager": "dev-develop",
+        "laminas/laminas-http": "dev-develop",
+        "laminas/laminas-modulemanager": "dev-develop",
+        "laminas/laminas-mvc": "dev-develop",
+        "laminas/laminas-zendframework-bridge": "^1.0"
     },
     "require-dev": {
-        "phpunit/PHPUnit": "3.7.*",
-        "zendframework/zend-config": "dev-develop",
-        "zendframework/zend-servicemanager": "dev-develop"
+        "laminas/laminas-config": "dev-develop",
+        "laminas/laminas-servicemanager": "dev-develop",
+        "phpunit/phpunit": "3.7.*"
     },
     "autoload": {
         "psr-0": {
-            "ZF\\Versioning\\": "src/",
-            "ZFTest\\": "test/"
+            "Laminas\\ApiTools\\Versioning\\": "src/",
+            "LaminasTest\\ApiTools\\": "test/"
         }
+    },
+    "replace": {
+        "zfcampus/zf-versioning": "self.version"
     }
 }
