Rewriting as Laminas Project package

--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,25 @@
 {
-    "name": "zfcampus/zf-versioning",
-    "description": "ZF2 Module providing listeners and route prototypes for implementing API versioning",
-    "type": "library",
+    "name": "laminas-api-tools/api-tools-versioning",
+    "description": "Laminas Module providing listeners and route prototypes for implementing API versioning",
     "license": "BSD-3-Clause",
     "keywords": [
-        "zf2",
-        "zend",
+        "laminas",
+        "api-tools",
         "module",
         "rest"
     ],
-    "homepage": "http://apigility.org/",
+    "homepage": "https://api-tools.getlaminas.org",
     "support": {
-        "email": "apigility-users@zend.com",
-        "irc": "irc://irc.freenode.net/apigility",
-        "source": "https://github.com/zfcampus/zf-versioning",
-        "issues": "https://github.com/zfcampus/zf-versioning/issues"
+        "docs": "https://api-tools.getlaminas.org/documentation",
+        "issues": "https://github.com/laminas-api-tools/api-tools-versioning/issues",
+        "source": "https://github.com/laminas-api-tools/api-tools-versioning",
+        "rss": "https://github.com/laminas-api-tools/api-tools-versioning/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
     },
-    "repositories": [
-        { "type": "composer", "url": "https://packages.zendframework.com" }
-    ],
+    "config": {
+        "sort-packages": true
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev",
@@ -27,25 +28,26 @@
     },
     "require": {
         "php": ">=5.3.23",
-        "zendframework/zend-eventmanager": ">=2.3,<2.5",
-        "zendframework/zend-escaper": ">=2.3,<2.5",
-        "zendframework/zend-http": ">=2.3,<2.5",
-        "zendframework/zend-loader": ">=2.3,<2.5",
-        "zendframework/zend-modulemanager": ">=2.3,<2.5",
-        "zendframework/zend-mvc": ">=2.3,<2.5",
-        "zendframework/zend-uri": ">=2.3,<2.5",
-        "zendframework/zend-validator": ">=2.3,<2.5"
+        "laminas/laminas-escaper": ">=2.3,<2.5",
+        "laminas/laminas-eventmanager": ">=2.3,<2.5",
+        "laminas/laminas-http": ">=2.3,<2.5",
+        "laminas/laminas-loader": ">=2.3,<2.5",
+        "laminas/laminas-modulemanager": ">=2.3,<2.5",
+        "laminas/laminas-mvc": ">=2.3,<2.5",
+        "laminas/laminas-uri": ">=2.3,<2.5",
+        "laminas/laminas-validator": ">=2.3,<2.5",
+        "laminas/laminas-zendframework-bridge": "^1.0"
     },
     "require-dev": {
+        "laminas/laminas-config": ">=2.3,<2.5",
+        "laminas/laminas-servicemanager": ">=2.3,<2.5",
+        "laminas/laminas-stdlib": ">=2.3,<2.5",
         "phpunit/phpunit": "~4.7",
-        "zendframework/zend-config": ">=2.3,<2.5",
-        "zendframework/zend-servicemanager": ">=2.3,<2.5",
-        "zendframework/zend-stdlib": ">=2.3,<2.5",
         "squizlabs/php_codesniffer": "^2.3"
     },
     "autoload": {
         "psr-4": {
-            "ZF\\Versioning\\": "src/"
+            "Laminas\\ApiTools\\Versioning\\": "src/"
         },
         "classmap": [
             "Module.php"
@@ -53,7 +55,10 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "ZFTest\\Versioning\\": "test/"
+            "LaminasTest\\ApiTools\\Versioning\\": "test/"
         }
+    },
+    "replace": {
+        "zfcampus/zf-versioning": "self.version"
     }
 }
