--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,43 @@
 {
-    "name": "zfcampus/zf-versioning",
-    "description": "ZF2 Module providing listeners and route prototypes for implementing API versioning",
-    "type": "library",
+    "name": "laminas-api-tools/api-tools-versioning",
+    "description": "Laminas Module providing listeners and route prototypes for implementing API versioning",
     "license": "BSD-3-Clause",
     "keywords": [
-        "zf2",
-        "zend",
+        "laminas",
+        "api-tools",
         "module",
         "rest"
     ],
-    "homepage": "http://apigility.org/",
+    "homepage": "https://api-tools.getlaminas.org",
     "support": {
-        "email": "apigility-users@zend.com",
-        "irc": "irc://irc.freenode.net/apigility",
-        "source": "https://github.com/zfcampus/zf-versioning",
-        "issues": "https://github.com/zfcampus/zf-versioning/issues"
+        "docs": "https://api-tools.getlaminas.org/documentation",
+        "issues": "https://github.com/laminas-api-tools/api-tools-versioning/issues",
+        "source": "https://github.com/laminas-api-tools/api-tools-versioning",
+        "rss": "https://github.com/laminas-api-tools/api-tools-versioning/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
+    },
+    "config": {
+        "sort-packages": true
     },
     "extra": {
         "branch-alias": {
             "dev-master": "1.2-dev",
             "dev-develop": "1.3-dev"
         },
-        "zf": {
-            "module": "ZF\\Versioning"
+        "laminas": {
+            "module": "Laminas\\ApiTools\\Versioning"
         }
     },
     "require": {
         "php": "^5.6 || ^7.0",
-        "zendframework/zend-eventmanager": "^2.6.3 || ^3.0.1",
-        "zendframework/zend-http": "^2.5.4",
-        "zendframework/zend-modulemanager": "^2.7.2",
-        "zendframework/zend-mvc": "^2.7.9 || ^3.0.2",
-        "zendframework/zend-servicemanager": "^2.7.6 || ^3.1",
-        "zendframework/zend-stdlib": "^2.7.7 || ^3.0.1"
+        "laminas/laminas-eventmanager": "^2.6.3 || ^3.0.1",
+        "laminas/laminas-http": "^2.5.4",
+        "laminas/laminas-modulemanager": "^2.7.2",
+        "laminas/laminas-mvc": "^2.7.9 || ^3.0.2",
+        "laminas/laminas-servicemanager": "^2.7.6 || ^3.1",
+        "laminas/laminas-stdlib": "^2.7.7 || ^3.0.1",
+        "laminas/laminas-zendframework-bridge": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8 || ^5.0",
@@ -40,12 +45,12 @@
     },
     "autoload": {
         "psr-4": {
-            "ZF\\Versioning\\": "src/"
+            "Laminas\\ApiTools\\Versioning\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "ZFTest\\Versioning\\": "test/"
+            "LaminasTest\\ApiTools\\Versioning\\": "test/"
         }
     },
     "scripts": {
@@ -56,5 +61,8 @@
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
         "test": "phpunit"
+    },
+    "replace": {
+        "zfcampus/zf-versioning": "self.version"
     }
 }
