feat: add psalm
closes #4

Signed-off-by: Dmitriy Bespalov <dbespalov.rosko@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
     "require-dev": {
         "laminas/laminas-coding-standard": "~2.3.0",
         "phpspec/prophecy-phpunit": "^2.0",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "psalm/plugin-phpunit": "^0.12.2",
+        "vimeo/psalm": "^3.16"
     },
     "autoload": {
         "psr-4": {
@@ -57,6 +59,7 @@
         ],
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
+        "static-analysis": "psalm --shepherd --stats",
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     },
