--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "laminas-api-tools/api-tools-versioning",
     "description": "Laminas Module providing listeners and route prototypes for implementing API versioning",
-    "license": "BSD-3-Clause",
     "keywords": [
         "laminas",
         "api-tools",
@@ -9,22 +8,7 @@
         "rest"
     ],
     "homepage": "https://api-tools.getlaminas.org",
-    "support": {
-        "docs": "https://api-tools.getlaminas.org/documentation",
-        "issues": "https://github.com/laminas-api-tools/api-tools-versioning/issues",
-        "source": "https://github.com/laminas-api-tools/api-tools-versioning",
-        "rss": "https://github.com/laminas-api-tools/api-tools-versioning/releases.atom",
-        "chat": "https://laminas.dev/chat",
-        "forum": "https://discourse.laminas.dev"
-    },
-    "config": {
-        "sort-packages": true
-    },
-    "extra": {
-        "laminas": {
-            "module": "Laminas\\ApiTools\\Versioning"
-        }
-    },
+    "license": "BSD-3-Clause",
     "require": {
         "php": "^5.6 || ^7.0",
         "laminas/laminas-eventmanager": "^2.6.3 || ^3.0.1",
@@ -35,9 +19,20 @@
         "laminas/laminas-stdlib": "^2.7.7 || ^3.0.1",
         "laminas/laminas-zendframework-bridge": "^1.0"
     },
+    "replace": {
+        "zfcampus/zf-versioning": "^1.3.0"
+    },
     "require-dev": {
         "laminas/laminas-coding-standard": "~1.0.0",
         "phpunit/phpunit": "^5.7.27 || ^6.5.8 || ^7.1.5"
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "extra": {
+        "laminas": {
+            "module": "Laminas\\ApiTools\\Versioning"
+        }
     },
     "autoload": {
         "psr-4": {
@@ -59,7 +54,12 @@
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     },
-    "replace": {
-        "zfcampus/zf-versioning": "^1.3.0"
+    "support": {
+        "issues": "https://github.com/laminas-api-tools/api-tools-versioning/issues",
+        "forum": "https://discourse.laminas.dev",
+        "chat": "https://laminas.dev/chat",
+        "source": "https://github.com/laminas-api-tools/api-tools-versioning",
+        "docs": "https://api-tools.getlaminas.org/documentation",
+        "rss": "https://github.com/laminas-api-tools/api-tools-versioning/releases.atom"
     }
 }
