--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
         "forum": "https://discourse.laminas.dev"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": false
+        }
     },
     "extra": {
         "laminas": {
@@ -32,8 +35,7 @@
         "laminas/laminas-modulemanager": "^2.7.2",
         "laminas/laminas-mvc": "^2.7.15 || ^3.0.2",
         "laminas/laminas-servicemanager": "^2.7.6 || ^3.1",
-        "laminas/laminas-stdlib": "^2.7.7 || ^3.0.1",
-        "laminas/laminas-zendframework-bridge": "^1.0"
+        "laminas/laminas-stdlib": "^2.7.7 || ^3.0.1"
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "~2.3.0",
@@ -63,7 +65,7 @@
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     },
-    "replace": {
-        "zfcampus/zf-versioning": "^1.3.0"
+    "conflict": {
+        "zfcampus/zf-versioning": "*"
     }
 }
